Implemented Hero Image/Banner

--- a/index.html
+++ b/index.html
@@ -18,6 +18,15 @@
             <li><button id="quote">Get a Quote</button></li>
         </ul>
     </nav>
-    
+    <section>
+        <div>
+            <img src="assets/images/Banner.jpg" alt="" id="hero-image">
+        </div>
+    </section>
+    <section>
+        <div>
+            
+        </div>
+    </section>
 </body>
 </html>
