Implemented About Us Section

--- a/index.html
+++ b/index.html
@@ -23,10 +23,23 @@
             <img src="assets/images/Banner.jpg" alt="" id="hero-image">
         </div>
     </section>
-    <section>
-        <div>
-            
+
+    <div id="contentContainer">
+
+        <div class="itemContainer">
+            <section class="itemLeft">
+                <h3 id="Who_Are_We">Who Are We?</h3>
+                <h3 id="About_Heading">Contemporary Coatings specialise in providing professional painting & decorating services in Kent...</h3>
+                <p>We have been in the industry for more than 35 years combined and have developed a strong reputation built on recommendation.</p>
+
+                    <p>We receive the majority of our work through repeat business with existing clients and personal recommendation.</p>
+                    
+                    <p>We feel this is testimony to the high standard of work we provide!</p>
+                    <button id="OurWorkBtn">See Some Of Our Work</button>
+            </section>
+            <img class="itemRight" src="/assets/images/Little-Bold-Design_WEB-1-1024x683.jpg" alt="Logo">
         </div>
-    </section>
+    </div>
+
 </body>
 </html>
