Service section added. More to implement. Minimal styles added

--- a/index.html
+++ b/index.html
@@ -18,11 +18,10 @@
             <li><button id="quote">Get a Quote</button></li>
         </ul>
     </nav>
-    <section>
         <div>
             <img src="assets/images/Banner.jpg" alt="" id="hero-image">
         </div>
-    </section>
+
 
     <div id="contentContainer">
 
@@ -32,14 +31,35 @@
                 <h3 id="About_Heading">Contemporary Coatings specialise in providing professional painting & decorating services in Kent...</h3>
                 <p>We have been in the industry for more than 35 years combined and have developed a strong reputation built on recommendation.</p>
 
-                    <p>We receive the majority of our work through repeat business with existing clients and personal recommendation.</p>
+                <p>We receive the majority of our work through repeat business with existing clients and personal recommendation.</p>
                     
-                    <p>We feel this is testimony to the high standard of work we provide!</p>
-                    <button id="OurWorkBtn">See Some Of Our Work</button>
+                <p>We feel this is testimony to the high standard of work we provide!</p>
+                <button id="OurWorkBtn">See Some Of Our Work</button>
             </section>
             <img class="itemRight" src="/assets/images/Little-Bold-Design_WEB-1-1024x683.jpg" alt="Logo">
         </div>
     </div>
 
+<div id="contentContainer">
+    <div id="serviceContainer">
+        <h3 id="serviceHeader">How can we help you?</h3>
+        <p id="serviceText">Our team consists of professionals who have a wealth of experience and expertise in this line of business. We can offer you personalised services to suit your style and requirements. Our business has been built around the core values of honesty, integrity, professionalism and reliability. We believe in working with our customers to ensure that their expectations are not just met, but exceeded. We are also happy to offer advice and suggestions to ensure that you maximise the potential of your home.</p>
+    </div>
+    <div class="itemContainerServices">
+        <img class="imgLeft" src="/assets/images/Little-Bold-Design_WEB-1-1024x683.jpg" alt="Logo">
+        <img class="imgRight" src="/assets/images/Little-Bold-Design_WEB-1-1024x683.jpg" alt="Logo">
+    </div>
+    <div>
+        <div class="itemContainerServices">
+            <div class="imgLeft">
+                <h3>Interior Painting</h3>
+                <p>Whether it’s giving the kitchen wall a new colour or sprucing up your bedroom, Contemporary Coatings know what’s right and will offer you the best possible solution and work with your specifications.</p>
+            </div>
+            <div class="imgRight">
+                <h3>Exterior Painting</h3>
+                <p>Does your brickwork need tidying up with a splash of paint, or your wood paneling needs bringing into this century with some beautiful restoration paintwork? We’re on hand to bring your vision to life.</p>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
-</html>
