& So Much More Section Implemented. Minimal Styling.

--- a/index.html
+++ b/index.html
@@ -53,13 +53,43 @@
         <div class="itemContainerServices">
             <div class="imgLeft">
                 <h3>Interior Painting</h3>
-                <p>Whether it’s giving the kitchen wall a new colour or sprucing up your bedroom, Contemporary Coatings know what’s right and will offer you the best possible solution and work with your specifications.</p>
+                <p>Whether it's giving the kitchen wall a new colour or sprucing up your bedroom, Contemporary Coatings know what's right and will offer you the best possible solution and work with your specifications.</p>
             </div>
             <div class="imgRight">
                 <h3>Exterior Painting</h3>
                 <p>Does your brickwork need tidying up with a splash of paint, or your wood paneling needs bringing into this century with some beautiful restoration paintwork? We’re on hand to bring your vision to life.</p>
             </div>
         </div>
+        <div class="itemContainerServices">
+            <img class="imgLeft" src="/assets/images/Little-Bold-Design_WEB-1-1024x683.jpg" alt="Logo">
+            <img class="imgRight" src="/assets/images/Little-Bold-Design_WEB-1-1024x683.jpg" alt="Logo">
+        </div>
+        <div class="itemContainerServices">
+            <div class="imgLeft">
+                <h3>Spraying</h3>
+                <p>Contemporary Coatings are domestic and commercial spray paint specialists. Offering professional spray painting to ceilings, walls, woodwork, refining to kitchen cabinets, bedroom and household furniture and custom joinery.</p>
+            </div>
+            <div class="imgRight">
+                <h3>Wallpapering</h3>
+                <p>Wanting to cover your living room or a feature wall in your bedroom or lounge? We have you covered, Contemporary Coatings provide high quality wallpapering work.</p>
+            </div>
+        </div>
+    </div>
+    <div id="serviceContainer02">
+        <h3 id="serviceHeader02">& So Much More...</h3>
+        <p>Having any tradespeople working in your home can be a stressful experience, and at Contemporary Coatings we understand that good, honest and clear communication is vital for all of our customers, as it gives both reassurance and peace of mind. We pride ourselves on being reliable, trustworthy and completing work to the deadlines agreed. Please contact us you won’t be disappointed!</p>
+    </div>
+    <div class="itemContainerServices">
+        <ul class="extraList">
+            <li>Decorating</li>
+            <li>Refurbishment</li>
+            <li>Extensions</li>
+            <li>New Builds</li>
+            <li>Paint Spraying</li>
+            <li>Kitchen Facelifts</li>
+            <li>Bedroom Facelifts</li>
+        </ul>
     </div>
 </div>
 </body>
+
