Review Section Implemented. Minimal Styling. Fixture of Work Button

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/7812bed04d.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/style.css">
     <title>Contemporary Coatings</title>
 </head>
@@ -34,9 +35,13 @@
                 <p>We receive the majority of our work through repeat business with existing clients and personal recommendation.</p>
                     
                 <p>We feel this is testimony to the high standard of work we provide!</p>
-                <button id="OurWorkBtn">See Some Of Our Work</button>
+                <div>
+                    <button id="OurWorkBtn">See Some of Our Work</button>
+                </div>
             </section>
-            <img class="itemRight" src="/assets/images/Little-Bold-Design_WEB-1-1024x683.jpg" alt="Logo">
+                <div class="itemRight">
+                    <img class="imgAboutUsRight" src="/assets/images/Little-Bold-Design_WEB-1-1024x683.jpg" alt="Logo">
+                </div>
         </div>
     </div>
 
@@ -81,15 +86,32 @@
     </div>
     <div class="itemContainerServices">
         <ul class="extraList">
-            <li>Decorating</li>
-            <li>Refurbishment</li>
-            <li>Extensions</li>
-            <li>New Builds</li>
-            <li>Paint Spraying</li>
-            <li>Kitchen Facelifts</li>
-            <li>Bedroom Facelifts</li>
+            <li><i class="fa-solid fa-check" id="tick"></i> Refurbishment</li>
+            <li><i class="fa-solid fa-check" id="tick"></i> Extensions</li>
+            <li><i class="fa-solid fa-check" id="tick"></i> New Builds</li>
+            <li><i class="fa-solid fa-check" id="tick"></i> Paint Spraying</li>
+            <li><i class="fa-solid fa-check" id="tick"></i> Kitchen Facelifts</li>
+            <li><i class="fa-solid fa-check" id="tick"></i> Bedroom Facelifts</li>
         </ul>
     </div>
 </div>
+<section class="blueBackground">
+<div id="contentContainer02">
+    <div id="serviceContainer02">
+        <h3 id="serviceHeader03">What Our Customers Say...</h3>
+    </div>
+    <div id="reviewContainer">
+        <p id="star"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></p>
+        <p id="star"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></p>
+        <p id="star"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></p>
+        <p id="review">We have had the pleasure of using Contemporary Coatings on a number of projects within both the retail and private sector. Megan and her team provide a professional, high level end service, completing projects within demanding timescales.</p>
+        <p id="review">Working with Meg & Don has been an absolute pleasure & I would highly recommend them to everyone. They carried out all the redecoration in our five bedroom Georgian property which has included things that go beyond the usual wall colours & wallpapering.</p>
+        <p id="review">They have done an amazing job doing with all the decorating in my home. Not only did they do a professional job with the decorating, they also did a fantastic job of cleaning up to make sure it looked like they were never there. Would recommend to everyone.</p>
+        <p id="review">Jon Beeching</p>
+        <p id="review">Kate Horrell</p>
+        <p id="review">Emma Simmons</p>
+    </div>
+</div>
+</section>
 </body>
 
