Reference Error for function

--- a/index.html
+++ b/index.html
@@ -113,5 +113,26 @@
     </div>
 </div>
 </section>
+
+<section>
+    <div id="contentContainer">
+        <div id="galleryButtons">
+            <button class="box" onclick="myFunction()">Click me</button>
+            <button>Interior</button>
+            <button>Exterior</button>
+            <button>Furniture Painting</button>
+            <button>Spraying</button>
+            <button>Wallpapering</button>
+        </div>
+        <div id="galleryContainer">
+            <img class="galleryImage" src="assets/images/Interior_01.jpg" alt="">
+            <img class="galleryImage" src="assets/images/ExteriorPainting_01.jpg" alt="">
+            <img class="galleryImage" src="assets/images/FurniturePainting_01.jpg" alt="">
+            <img class="galleryImage" src="assets/images/Spraying_01.jpg" alt="">
+            <img class="galleryImage" src="assets/images/Wallpapering_01.jpg" alt="">
+        </div>
+    </div>
+</section>
+<script src="script.js"></script>
 </body>
 
