Implemented Basic Gallery. Minimal Styling.

--- a/index.html
+++ b/index.html
@@ -117,22 +117,32 @@
 <section>
     <div id="contentContainer">
         <div id="galleryButtons">
-            <button class="box" onclick="myFunction()">Click me</button>
-            <button>Interior</button>
-            <button>Exterior</button>
-            <button>Furniture Painting</button>
-            <button>Spraying</button>
-            <button>Wallpapering</button>
+            <button onclick="showImages()">All</button>
+            <button onclick="showInterior()">Interior</button>
+            <button onclick="showExterior()">Exterior</button>
+            <button onclick="showFurniture()">Furniture Painting</button>
+            <button onclick="showSpraying()">Spraying</button>
+            <button onclick="showWallpapering()">Wallpapering</button>
         </div>
         <div id="galleryContainer">
-            <img class="galleryImage" src="assets/images/Interior_01.jpg" alt="">
-            <img class="galleryImage" src="assets/images/ExteriorPainting_01.jpg" alt="">
-            <img class="galleryImage" src="assets/images/FurniturePainting_01.jpg" alt="">
-            <img class="galleryImage" src="assets/images/Spraying_01.jpg" alt="">
-            <img class="galleryImage" src="assets/images/Wallpapering_01.jpg" alt="">
+            <img id="galleryImages01" class="galleryImage" src="assets/images/Interior_01.jpg" alt="">
+            <img id="galleryImages02" class="galleryImage" src="assets/images/Interior_02.jpg" alt="">
+            <img id="galleryImages03" class="galleryImage" src="assets/images/Interior_03.jpg" alt="">
+            <img id="galleryImages04" class="galleryImage" src="assets/images/ExteriorPainting_01.jpg" alt="">
+            <img id="galleryImages05" class="galleryImage" src="assets/images/ExteriorPainting_02.jpg" alt="">
+            <img id="galleryImages06" class="galleryImage" src="assets/images/ExteriorPainting_03.jpg" alt="">
+            <img id="galleryImages07" class="galleryImage" src="assets/images/FurniturePainting_01.jpg" alt="">
+            <img id="galleryImages08" class="galleryImage" src="assets/images/FurniturePainting_02.jpg" alt="">
+            <img id="galleryImages09" class="galleryImage" src="assets/images/FurniturePainting_03.jpg" alt="">
+            <img id="galleryImages10" class="galleryImage" src="assets/images/Spraying_01.jpg" alt="">
+            <img id="galleryImages11" class="galleryImage" src="assets/images/Spraying_02.jpg" alt="">
+            <img id="galleryImages12" class="galleryImage" src="assets/images/Spraying_03.jpg" alt="">
+            <img id="galleryImages13" class="galleryImage" src="assets/images/Wallpapering_01.jpg" alt="">
+            <img id="galleryImages14" class="galleryImage" src="assets/images/Wallpapering_02.jpg" alt="">
+            <img id="galleryImages15" class="galleryImage" src="assets/images/Wallpapering_03.jpg" alt="">
         </div>
     </div>
 </section>
-<script src="script.js"></script>
+<script src="assets/images/js/script.js"></script>
 </body>
 
