Fixed Hero-Image. Added Styles To Nav.

--- a/index.html
+++ b/index.html
@@ -12,17 +12,16 @@
     <img src="assets/images/Contemporary-Coatings_Logo_NavyText_3D-140x86.png" alt="Contemporary Coating's Logo" id="logo">
     <nav>
         <ul>
-            <li><a>Home</a></li>
-            <li><a>About Us</a></li>
-            <li><a>Our Services</a></li>
-            <li><a>Gallery</a></li>
-            <li><button id="quote">Get a Quote</button></li>
+            <li><a href="#fullscreen" class="hover-underline-animation">Home</a></li>
+            <li><a href="" class="hover-underline-animation">About Us</a></li>
+            <li><a href="" class="hover-underline-animation">Our Services</a></li>
+            <li><a href="" class="hover-underline-animation">Gallery</a></li>
+            <li><a id="quote">Get a Quote</a></li>
         </ul>
     </nav>
-        <div>
-            <img src="assets/images/Banner.jpg" alt="" id="hero-image">
+        <div id="fullScreen">
+            <img src="assets/images/Banner_DarkBlue_01.jpg" alt="" id="hero-image">
         </div>
-
 
     <div id="contentContainer">
 
@@ -214,7 +213,7 @@
     </div>
 </section>
 
-<footer class="contentContainer">
+<footer id="contentContainerFooter">
     <div class="itemContainerFooter">
         <div class="itemLeftFoot">
             <img src="assets/images/Contemporary-Coatings_Logo_NavyText_3D-1024x626.png" alt="Contemporary Coating's Logo" id="footerLogo">
@@ -222,7 +221,8 @@
             <p id="info">Don <a>07724 748515</a></p>
             <p id="info">Meg <a>07547 865157</a></p>
         </div>
-            <div id="map" class="itemRightFoot"></div>
+        <div class="itemRightFoot">
+            <div id="map"></div>
         </div>
     </div>
 </footer>
