Implemented Sticky Nav. Alligned 4 Images In Services

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <title>Contemporary Coatings</title>
 </head>
 <body>
-    <img src="assets/images/Contemporary-Coatings_Logo_NavyText_3D-140x86.png" alt="Contemporary Coating's Logo" id="logo">
     <nav>
+        <img src="assets/images/Contemporary-Coatings_Logo_NavyText_3D-140x86.png" alt="Contemporary Coating's Logo" id="logo">
         <ul>
             <li><a href="#fullscreen" class="hover-underline-animation">Home</a></li>
             <li><a href="" class="hover-underline-animation">About Us</a></li>
@@ -32,7 +32,7 @@
                 <p>We have been in the industry for more than 35 years combined and have developed a strong reputation built on recommendation.</p>
                 <p>We receive the majority of our work through repeat business with existing clients and personal recommendation.</p>
                 <div>
-                    <button id="OurWorkBtn">See Some of Our Work</button>
+                    <a id="OurWorkBtn">See Some of Our Work</a>
                 </div>
             </section>
                 <div class="itemRight">
@@ -41,41 +41,30 @@
         </div>
     </div>
 
-<div id="contentContainer">
-    <div id="serviceContainer">
-        <h3 id="serviceHeader">How can we help you?</h3>
-        <p id="serviceText">Our team consists of professionals who have a wealth of experience and expertise in this line of business. We can offer you personalised services to suit your style and requirements. Our business has been built around the core values of honesty, integrity, professionalism and reliability. We believe in working with our customers to ensure that their expectations are not just met, but exceeded. We are also happy to offer advice and suggestions to ensure that you maximise the potential of your home.</p>
-    </div>
-    <div class="itemContainerServices">
-        <img class="imgLeft" src="/assets/images/Little-Bold-Design_WEB-1-1024x683.jpg" alt="Logo">
-        <img class="imgRight" src="/assets/images/Little-Bold-Design_WEB-1-1024x683.jpg" alt="Logo">
-    </div>
-    <div>
-        <div class="itemContainerServices">
-            <div class="imgLeft">
+
+    <div id="contentContainer">
+        <div id="itemContainerServices">
+            <div id="images">
+                <img id="image" src="/assets/images/Little-Bold-Design_WEB-1-1024x683.jpg" alt="">
                 <h3>Interior Painting</h3>
                 <p>Whether it's giving the kitchen wall a new colour or sprucing up your bedroom, Contemporary Coatings know what's right and will offer you the best possible solution and work with your specifications.</p>
             </div>
-            <div class="imgRight">
+            <div id="images">
+                <img id="image" src="/assets/images/Little-Bold-Design_WEB-1-1024x683.jpg" alt="">
                 <h3>Exterior Painting</h3>
                 <p>Does your brickwork need tidying up with a splash of paint, or your wood paneling needs bringing into this century with some beautiful restoration paintwork? We’re on hand to bring your vision to life.</p>
             </div>
-        </div>
-        <div class="itemContainerServices">
-            <img class="imgLeft" src="/assets/images/Little-Bold-Design_WEB-1-1024x683.jpg" alt="Logo">
-            <img class="imgRight" src="/assets/images/Little-Bold-Design_WEB-1-1024x683.jpg" alt="Logo">
-        </div>
-        <div class="itemContainerServices">
-            <div class="imgLeft">
+            <div id="images">
+                <img id="image" src="/assets/images/Little-Bold-Design_WEB-1-1024x683.jpg" alt="">
                 <h3>Spraying</h3>
-                <p>Contemporary Coatings are domestic and commercial spray paint specialists. Offering professional spray painting to ceilings, walls, woodwork, refining to kitchen cabinets, bedroom and household furniture and custom joinery.</p>
+                <p>Contemporary Coatings are domestic and commercial spray paint specialists. Offering professional spray painting to ceilings, walls, bedroom and household furniture and custom joinery.</p>
             </div>
-            <div class="imgRight">
+            <div id="images">
+                <img id="image" src="/assets/images/Little-Bold-Design_WEB-1-1024x683.jpg" alt="">
                 <h3>Wallpapering</h3>
-                <p>Wanting to cover your living room or a feature wall in your bedroom or lounge? We have you covered, Contemporary Coatings provide high quality wallpapering work.</p>
+                <p>Are you Wanting to cover your living room or a feature wall in your bedroom or lounge? Don't worry, We have you covered! Contemporary Coatings provide high quality wallpapering work.</p>
             </div>
         </div>
-    </div>
     <div id="serviceContainer02">
         <h3 id="serviceHeader02">& So Much More...</h3>
         <p>Having any tradespeople working in your home can be a stressful experience, and at Contemporary Coatings we understand that good, honest and clear communication is vital for all of our customers, as it gives both reassurance and peace of mind. We pride ourselves on being reliable, trustworthy and completing work to the deadlines agreed. Please contact us you won’t be disappointed!</p>
@@ -107,6 +96,7 @@
         <p id="review">Kate Horrell</p>
         <p id="review">Emma Simmons</p>
     </div>
+</div>
 </div>
 </section>
 
